# benchmarks

./: .gitignore  README.md  create-graph.hs  ruby-install.txt  ruby_choices.txt  setup-python.sh  setup.sh
bigtable/: LICENSE  bench  bigtable.cabal  bigtable.html  goliath.rb  lighttpd.conf  nginx.conf  rack.rb  snap.hs  warp.hs  yesod.hs
bigtable/c-fastcgi/: Makefile  bench  c-fastcgi.c  lighttpd.conf
bigtable/cgi/: Makefile  bench  bigtable.c  bigtable.html  blaze-builder.hs  bytestring.hs  cgi-package.hs  hack.hs  hamlet.hs  lighttpd.conf  perl.cgi  python.cgi  run  string.hs  text-builder.hs  text.hs  wai.hs  yesod.hs
bigtable/direct-fastcgi/: bench  fastcgi.hs  lighttpd.conf  run
bigtable/fastcgi/: Makefile  bench  fastcgi.hs  lighttpd.conf
bigtable/hack/happstack/: Makefile  bench  hack.hs
bigtable/hamlet/: bench  bytestring.cgi  noenum.cgi  plain.cgi
bigtable/hamlet/bytestring/: hamlet.hs
bigtable/hamlet/bytestring/Text/Hamlet/: Monad.hs  Quasi.hs
bigtable/hamlet/noenum/Text/Hamlet/: Monad.hs
bigtable/hamlet/plain/: Makefile
bigtable/hyena/: Makefile  bench  hyena.hs  run
bigtable/snap/: run  snap.hs
bigtable/snap-modified/: Makefile  bench  snap.hs
bigtable/wai/fastcgi/: Makefile  bench  fastcgi.hs  lighttpd.conf
bigtable/wai/happstack/: Makefile  bench  happstack.hs  run
bigtable/wai/simpleserver/: Makefile  bench  run  simpleserver.hs
bigtable/wai/snap/: Makefile  bench  run  snap-wai.hs
bigtable/yesod/fastcgi/: bench  fastcgi.hs  lighttpd.conf
bigtable/yesod/simpleserver/: Makefile  bench  run
bigtable/yesod/snap/: Makefile  bench  run  snap-yesod.hs
hello/fastcgi/: Makefile  bench  hello.hs  lighttpd.conf
hello/node/: hello.js
pong/: bench  elli.sh  goliath.rb  goliath.sh  happstack.hs  happstack.sh  lib.sh  lighttpd.conf  nginx.conf  nginx.sh  node.js  node.sh  passenger.sh  php-fpm.conf  php.nginx.conf  php.sh  pong.cabal  pong.php  pong.war  python.nginx.conf  python.py  python.sh  rack.rb  rack.ru  ruby_goliath.rb  runall.sh  snap.hs  snap.sh  summary.sh  thin.sh  tornado.py  tornado.sh  unicorn.sh  warp.hs  warp.sh  winstone.sh  yesod.hs  yesod.sh
pong/erlang/: .gitignore  rebar  rebar.config
pong/erlang/apps/elli_pong/: rebar.config
pong/erlang/apps/elli_pong/src/: elli_pong.app.src  elli_pong.erl  elli_pong_callback.erl  elli_pong_sup.erl
pong/erlang/rel/: reltool.config
pong/erlang/rel/files/: app.config  vm.args
pong/java/web/: Pong.java  build.sh
pong/java/web/WEB-INF/: web.xml
pong/passenger/: conifg.ru
static-file/: bench  lighttpd.conf  nginx.conf  snap.hs  static-file.cabal  warp.hs  yesod.hs
yesod/blog/: .gitignore
yesod/blog/cgi/: Makefile  blog.hs  lighttpd.conf
yesod/blog/fastcgi/: Makefile  blog.hs  lighttpd.conf
yesod/blog/fastcgi-redis/: blog.hs
yesod/blog/simpleserver/: blog.hs
yesod/blog/snap/: Makefile  bench  blog.hs  run
