Name:                bigtable
Version:             0.1
Synopsis:            Bigtable benchmark
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web
Build-type:          Simple

Cabal-version:       >=1.2


Executable warp
  Main-is:             warp.hs
  Build-depends:       base > 4, wai, warp, blaze-builder, http-types >= 0.7
  Ghc-options:         -O2 -threaded -rtsopts

Executable snap
  Main-is:             snap.hs
  Build-depends:       base > 4, snap-server >= 0.3 && < 0.4, snap-core
  Ghc-options:         -O2 -threaded -rtsopts

Executable yesod
  Main-is:             yesod.hs
  Build-depends:       base > 4, yesod-core >= 1, bytestring
  Ghc-options:         -O2 -threaded -rtsopts
