Name:                pong
Version:             0.1
Synopsis:            Pong benchmark
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web
Build-type:          Simple

Cabal-version:       >=1.2


Executable warp
  Main-is:             warp.hs
  Build-depends:       base > 4, wai, warp >= 0.3.2.1, blaze-builder, http-types >= 0.7
  Ghc-options:         -O2 -threaded -rtsopts

Executable snap
  Main-is:             snap.hs
  Build-depends:       base > 4, snap-server >= 0.4 && < 0.5, snap-core
  Ghc-options:         -O2 -threaded -rtsopts

Executable happstack
  Main-is:             happstack.hs
  Build-depends:       base > 4, happstack-server
  Ghc-options:         -O2 -threaded -rtsopts

Executable yesod
  Main-is:             yesod.hs
  Build-depends:       base > 4, yesod-core, bytestring
  Ghc-options:         -O2 -threaded -rtsopts
